# advance_memory_mngmnt

./: .gitignore  CMakeLists.txt
00_memory_pool/: CMakeLists.txt  mem_pool.c  mem_pool.h
01_memory_pool_imp/: CMakeLists.txt  mem_pool.c  mem_pool.h  memory_pool_tester.c
02_ring_buffers/: ring_buffer.c
03_ring_buffers_mempool/: mempool_ring.c
03_ring_buffers_mempool_imp/: CMakeLists.txt  mempool_ring.h  mempool_test.c  ring_buffer.c  ring_buffer.h
03_ring_buffers_mempool_imp_old/: mempool_ring.c  mempool_ring.h
04_shared_mempool/: CMakeLists.txt  mempool_ring.c  mempool_ring.h  ring_buffer.c
04_shared_mempool_old_imp/: mempool_test.c  ring_buffer.h
05_chat_room/: CMakeLists.txt  message_tracker.c  message_tracker.h  shm_manager.c  shm_manager.h
05_chat_room_old_imp/: CMakeLists.txt  chat_client.c  chat_server.c  shm_manager.c  shm_manager.h
06_pointer_validation/: pointer_validation.c
